# apiary

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.swebench.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  verify-userns.sh
bindings/python/: pyproject.toml
bindings/python/apiary_client/: __init__.py  session.py
bindings/python/apiary_client/mcp/: __init__.py  server.py
bindings/python/apiary_client/swebench/: __init__.py  load.py  resolve_images.py
bindings/python/tests/: test_apiary.py  test_swebench_load.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.swebench  entrypoint.sh  swebench-entrypoint.sh  verify-sandbox.sh
docs/: slurm-debugging-journal.md
examples/: batch_tasks.rs
mcp/: apiary_mcp.py  pyproject.toml
scripts/: build_apiary.sh  create_rootfs.sh  run_apiary.sh  smoke_test.sh  test_mcp_concurrent.py
src/: cli.rs  lib.rs  main.rs  server.rs
src/api/: cli.rs  mod.rs  server.rs
src/config/: mod.rs  overlay.rs  schema.rs
src/images/: extractor.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/mcp/: apiary_client.rs  main.rs  session.rs  tools.rs
src/pool/: history.rs  image_jobs.rs  manager.rs  mod.rs  scaling.rs  session.rs
src/sandbox/: cgroup.rs  mod.rs  monitor.rs  mounts.rs  namespace.rs  output.rs  overlay.rs  process.rs  rlimits.rs  seccomp.rs
src/swebench/: swebench_prefetch_layers.rs
src/task/: executor.rs  mod.rs
swebench/: pyproject.toml
swebench/apiary_swebench/: __init__.py  client.py  rootfs.py  session.py
tests/integration/: mod.rs
