[package]
name = "apiary"
version = "0.1.0"
edition = "2021"
authors = ["Yi Sun"]
description = "A lightweight sandbox pool for running agents"
license = "MIT"
repository = "https://github.com/Boreas618/apiary"
keywords = ["sandbox", "container", "namespace", "linux", "isolation"]
categories = ["os::linux-apis", "development-tools"]

[lib]
name = "apiary"
path = "src/lib.rs"

[[bin]]
name = "apiary"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
shell-words = "1"
futures = "0.3"
libc = "0.2"
axum = { version = "0.8", features = ["json"] }
nix = { version = "0.29", features = ["process", "mount", "sched", "signal", "user", "fs", "hostname"] }
seccompiler = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
