[package]
name = "apiary"
version = "0.1.0"
edition = "2021"
authors = ["Yi Sun"]
description = "A lightweight sandbox pool for running agents"
license = "MIT"
repository = "https://github.com/Boreas618/apiary"
keywords = ["sandbox", "container", "namespace", "linux", "isolation"]
categories = ["os::linux-apis", "development-tools"]

[lib]
name = "apiary"
path = "src/lib.rs"

[[bin]]
name = "apiary"
path = "src/main.rs"

[[bin]]
name = "apiary-mcp"
path = "src/mcp/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
shell-words = "1"
libc = "0.2"
axum = { version = "0.8", features = ["json"] }
nix = { version = "0.29", features = ["process", "mount", "sched", "signal", "user", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"

# MCP server dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rmcp = { version = "1.1", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"], optional = true }
dashmap = { version = "6", optional = true }
base64 = { version = "0.22", optional = true }
shell-escape = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[features]
default = []
mcp = ["dep:reqwest", "dep:rmcp", "dep:dashmap", "dep:base64", "dep:shell-escape", "dep:tokio-util", "dep:http"]

[profile.release]
lto = true
codegen-units = 1
