[package]
name = "apiary"
version = "0.1.0"
edition = "2021"
authors = ["Yi Sun"]
description = "A lightweight sandbox pool for running agents"
license = "MIT"
repository = "https://github.com/Boreas618/apiary"
keywords = ["sandbox", "container", "namespace", "linux", "isolation"]
categories = ["os::linux-apis", "development-tools"]

[lib]
name = "apiary"
path = "src/lib.rs"

[[bin]]
name = "apiary"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
shell-words = "1"
libc = "0.2"
axum = { version = "0.8", features = ["json"] }
nix = { version = "0.29", features = ["process", "mount", "sched", "signal", "user", "fs"] }
sha2 = "0.10"
tar = "0.4"
xattr = "1"
flate2 = "1"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
